backend/TempExecution/03c9666399a544d79ccf6efcba6fa9bd_output.txt
03c9666399a544d79ccf6efcba6fa9bd.c:5:1: error: unknown type name 'using'
    5 | int main() {
      | ^~~~~
03c9666399a544d79ccf6efcba6fa9bd.c:5:17: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'std'
    5 | int main() {
      |                 ^  
03c9666399a544d79ccf6efcba6fa9bd.c: In function 'main':
03c9666399a544d79ccf6efcba6fa9bd.c:15:5: error: 'cin' undeclared (first use in this function)
03c9666399a544d79ccf6efcba6fa9bd.c:15:5: note: each undeclared identifier is reported only once for each function it appears in
03c9666399a544d79ccf6efcba6fa9bd.c:17:5: error: 'cout' undeclared (first use in this function)
03c9666399a544d79ccf6efcba6fa9bd.c:19:5: error: 'vector' undeclared (first use in this function)
03c9666399a544d79ccf6efcba6fa9bd.c:19:12: error: expected expression before 'int'
03c9666399a544d79ccf6efcba6fa9bd.c:21:5: error: 'v' undeclared (first use in this function)
03c9666399a544d79ccf6efcba6fa9bd.c:23:11: error: 'true' undeclared (first use in this function)
03c9666399a544d79ccf6efcba6fa9bd.c:2:1: note: 'true' is defined in header '<stdbool.h>'; this is probably fixable by adding '#include <stdbool.h>'
    1 | #include<stdio.h>
  +++ |+#include <stdbool.h>
    2 | 
